--- a/src/admin/Admin.module.css
+++ b/src/admin/Admin.module.css
@@ -1,5 +1,5 @@
 .login {
-  background-image: url("../interior-do-restaurante.jpg");
+  background-image: url("../bife-grelhado-na-superficie-de-madeira-escura.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 100%;
@@ -14,7 +14,16 @@
 .login h1 {
   color: #fff;
 }
+.login h3 {
+  background-color: rgba(0, 0, 0, 0.582);
+  border-radius: 5px;
+  padding: 5px;
+  color: #fff;
+}
 .login form {
+  background-color: rgba(0, 0, 0, 0.582);
+  padding: 4rem;
+  border-radius: 5px;
   color: #fff;
   gap: 10px;
   display: flex;
@@ -34,6 +43,12 @@
   background: none;
   border: 1px solid;
   outline: none;
+}
+.login form input::-moz-placeholder {
+  color: rgba(255, 255, 255, 0.8784313725);
+}
+.login form input::placeholder {
+  color: rgba(255, 255, 255, 0.8784313725);
 }
 .login form button {
   color: #fff;
