--- a/src/admin/Admin.module.scss
+++ b/src/admin/Admin.module.scss
@@ -1,5 +1,5 @@
 .login {
-  background-image: url("../interior-do-restaurante.jpg");
+  background-image: url("../bife-grelhado-na-superficie-de-madeira-escura.jpg");
   background-size: cover;
 
   background-repeat: no-repeat;
@@ -14,7 +14,16 @@
   h1 {
     color: #fff;
   }
+  h3 {
+    background-color: rgba(0, 0, 0, 0.582);
+    border-radius: 5px;
+    padding: 5px;
+    color: #fff;
+  }
   form {
+    background-color: rgba(0, 0, 0, 0.582);
+    padding: 4rem;
+    border-radius: 5px;
     color: #fff;
     gap: 10px;
     display: flex;
@@ -28,6 +37,9 @@
       text-align: center;
     }
     input {
+      &::placeholder {
+        color: #ffffffe0;
+      }
       color: #fff;
       border-radius: 5px;
       background: none;
