--- a/src/admin/Cadastro.module.scss
+++ b/src/admin/Cadastro.module.scss
@@ -1,4 +1,7 @@
 .cadastro {
+  background-image: url("../bife-grelhado-na-superficie-de-madeira-escura.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -7,24 +10,42 @@
   position: absolute;
   left: 0;
   right: 0;
+  h1 {
+    color: #fff;
+  }
+  h3 {
+    background-color: rgba(0, 0, 0, 0.582);
+    border-radius: 5px;
+    padding: 5px;
+  }
   form {
+    background-color: rgba(0, 0, 0, 0.582);
+    padding: 4rem;
+    border-radius: 5px;
+    color: #fff;
     gap: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     label {
+      color: #fff;
       display: flex;
       flex-direction: column;
       text-align: center;
     }
     input {
+      &::placeholder {
+        color: #ffffffe0;
+      }
+      color: #fff;
       border-radius: 5px;
       background: none;
       border: 1px solid;
       outline: none;
     }
     button {
+      color: #fff;
       border-radius: 5px;
       background: none;
       border: 1px solid;
