--- a/src/home/Home.module.css
+++ b/src/home/Home.module.css
@@ -10,16 +10,58 @@
   background-image: url("../interior-do-restaurante.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  gap: 1rem;
+}
+.home .btGerar {
+  background: none;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  color: #fff;
+  outline: none;
+  padding: 3px;
+}
+.home .reservas {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  background-color: rgba(0, 0, 0, 0.582);
+  border-radius: 5px;
+  padding: 10px 1rem;
+  color: #fff;
+}
+.home .reservas select {
+  background: none;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  color: #fff;
+  outline: none;
+}
+.home .reservas button {
+  background: none;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  color: #fff;
+  outline: none;
+  padding: 5px 20px;
+}
+.home .reservas option {
+  color: #000;
 }
 .home h1 {
   color: #fff;
+  margin: 0;
+}
+.home h3 {
+  color: #fff;
+  text-align: center;
+  margin: 0;
 }
 .home form {
   display: flex;
   flex-direction: column;
   gap: 5px;
   background-color: rgba(0, 0, 0, 0.582);
-  padding: 5rem;
+  padding: 1rem 4rem;
   border-radius: 5px;
 }
 .home form input {
