--- a/src/home/Home.module.scss
+++ b/src/home/Home.module.scss
@@ -10,16 +10,59 @@
   background-image: url("../interior-do-restaurante.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  gap: 1rem;
+  .btGerar {
+    background: none;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    color: #fff;
+    outline: none;
+    padding: 3px;
+  }
+  .reservas {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    background-color: rgba(0, 0, 0, 0.582);
+    border-radius: 5px;
+    padding: 10px 1rem;
+    color: #fff;
+    select {
+      background: none;
+      border: 1px solid #fff;
+      border-radius: 5px;
+      color: #fff;
+      outline: none;
+    }
+    button {
+      background: none;
+      border: 1px solid #fff;
+      border-radius: 5px;
+      color: #fff;
+      outline: none;
+      padding: 5px 20px;
+    }
+    option {
+      color: #000;
+    }
+  }
   h1 {
     color: #fff;
+    margin: 0;
+  }
+  h3 {
+    color: #fff;
+    text-align: center;
+    margin: 0;
   }
   form {
     display: flex;
     flex-direction: column;
     gap: 5px;
     background-color: rgba(0, 0, 0, 0.582);
-    padding: 5rem;
+    padding: 1rem 4rem;
     border-radius: 5px;
+
     input {
       background: none;
       border: 1px solid #fff;
