imagens otimizadas e type password na senha

--- a/src/admin/Cadastro.module.scss
+++ b/src/admin/Cadastro.module.scss
@@ -1,5 +1,5 @@
 .cadastro {
-  background-image: url("../bife-grelhado-na-superficie-de-madeira-escura.jpg");
+  background-image: url("../bife-grelhado-na-superficie-de-madeira-escura\ \(1\).jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 100%;
