--- a/src/home/Home.module.scss
+++ b/src/home/Home.module.scss
@@ -7,7 +7,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  background-image: url("../interior-do-restaurante.jpg");
+  background-image: url("../interior-do-restaurante\ \(1\).jpg");
   background-repeat: no-repeat;
   background-size: cover;
   gap: 1rem;
