--- a/src/home/dados.module.scss
+++ b/src/home/dados.module.scss
@@ -1,5 +1,5 @@
 .dados {
-  background-image: url("../interior-do-restaurante.jpg");
+  background-image: url("../interior-do-restaurante\ \(1\).jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 100%;
